2004-01-22  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (dowin): Revert accidental checkin from November.

2003-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (main): Print "root" group with local admins group sid
	and gid 0.

2003-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Add rules to build ipcrm and ipcs.
	* ipcrm.c: New file.
	* ipcs.c: New file.

2003-11-14  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c: Avoid compiler warnings throughout.
	* mkpasswd.c: Ditto.
	* passwd.c: Ditto.

2003-11-07  Mark Blackburn  <marklist@fangorn.ca>

	* cygpath.cc (main): Allow multiple pathnames on command line.

2003-11-04  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.c (PrintPW): Turn around meaning printed for "Password not
	required" option to be in line with Windows meaning.
	(main): Use more appropriate 1008 option when calling
	NetUserSetInfo to change flag values.

2003-11-04  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.c (UF_LOCKOUT): Remove (defined in lmaccess.h).
	(version): Bump version number to 1.5.
	(longopts): Add -c, -C, -e, -E, -p, -P options.
	(opts): Ditto.
	(PrintPW): Print values of UF_PASSWD_CANT_CHANGE and
	UF_DONT_EXPIRE_PASSWD flags. Slightly reformat output. Don't suppress
	correct system password settings just because the account has admin
	privileges.
	(usage): Define as "noreturn" function. Restructure and rephrase
	output. Accomodate new options.
	(print_version): Fix copyright dates.
	(main): Accomodate new options for setting UF_PASSWD_CANT_CHANGE,
	UF_DONT_EXPIRE_PASSWD and UF_PASSWD_NOTREQD settings.

2003-10-17  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (pretty_id): Don't exec if `id' program is not found.

2003-09-20  Christopher Faylor  <cgf@redhat.com>

	* kill.cc (main): Allow negative pids (indicates process groups).

2003-09-17  Christopher Faylor  <cgf@redhat.com>

	* parse_pe.cc (exclusion::sort_and_check): Make error message a little